objects/Customer_Information__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>180</length>
    <type>Text</type>
</CustomField>