objects/Customer_Information__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer&apos;s city.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>180</length>
    <type>Text</type>
</CustomField>