objects/Customer_Information__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Customer&apos;s first name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>