objects/Customer_Information__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Customer&apos;s last name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>