objects/Customer_Information__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Customer&apos;s state</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>180</length>
    <type>Text</type>
</CustomField>